fix scrolling ui on hamburger menu, footer input, section padding, indicator, scrolling horizontal on mobile

--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -13,6 +13,12 @@ body {
   font-family: "Inter", sans-serif;
   color: var.$secondary-color;
   line-height: 1.5;
+  overflow: hidden;
+}
+
+main {
+  height: 100vh;
+  overflow-y: auto;
 }
 
 //ul
