--- a/scss/components/_community.scss
+++ b/scss/components/_community.scss
@@ -16,6 +16,7 @@
     gap: 20px;
   }
   &-card {
+    flex: 1;
     background-color: #fff;
     border-radius: 8px;
     padding: 24px 32px;
@@ -28,7 +29,6 @@
     gap: 8px;
     @extend .shadow-sm;
     &__top-content {
-      height: 144px;
       display: flex;
       gap: 16px;
       flex-direction: column;
