--- a/scss/components/_tesla.scss
+++ b/scss/components/_tesla.scss
@@ -99,6 +99,10 @@
     }
     &__left {
       text-align: center;
+      img {
+        width: 100%;
+        object-fit: contain;
+      }
     }
   }
 }
